--- a/Frontend/src/components/AddForm.module.css
+++ b/Frontend/src/components/AddForm.module.css
@@ -21,7 +21,7 @@
     font-size: 16px;
     padding-left: 20px;
     letter-spacing: 0.5px;
-
+    height: 100%;
     border-radius: 5px 0px 0px 5px;
 }
 .btn{
