--- a/Frontend/src/components/Navbar/Loading.module.css
+++ b/Frontend/src/components/Navbar/Loading.module.css
@@ -2,12 +2,12 @@
     0%{
         transform: rotate(0deg);
     }30%{
-        transform: rotate(90deg);
+        transform: rotate(180deg);
     }60%{
-        transform: rotate(200deg);
+        transform: rotate(30deg);
     }
     70%{
-        transform: rotate(300deg);
+        transform: rotate(330deg);
     }
     100%{
         transform: rotate(360deg);
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     border: 3px solid transparent;
-    border-left: 3px solid white;
+    border-right: 3px solid white;
     border-radius: 50%;
     animation: load 2s linear  infinite  ;
 }
