--- a/Frontend/src/components/Navbar/Navbar.module.css
+++ b/Frontend/src/components/Navbar/Navbar.module.css
@@ -31,4 +31,27 @@
     margin-right: 20px;
     position: relative;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+}
+
+
+.box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin-right: 20px;
+}
+
+
+.logoutBtn{
+    width: 30px;
+    height: 30px;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 25px;
+    font-weight: 500;
+    color: white;
 }
